Reform website to start own project
Remove template commits to start building own personal website content

--- a/index.html
+++ b/index.html
@@ -1,30 +1,47 @@
 <!DOCTYPE html>
 <html>
+    <!-- Header descriptor -->
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />  <!-- Portability to mobile/tablet screen -->
+        <title>Jason Lin - Software Designer</title>
+    </head>
+    <!-- End of header descriptor -->
+
+    <body>
+        <!-- Header container -->
+        <header>
+            <div id="header-inner">
+                <!-- Logo reference -->
+                <!-- Navigation menu -->
+                <nav>
+                    <!-- Menu icon for mobile/tablet -->
+                    <!-- Navigation tabs -->
+                    <ul>
+                        <li><a href="index.html" class="current">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Resume</a></li>
+                        <li><a href="#">Profolio></a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <!-- End of header container -->
+
+        <!-- Body container -->
+        <section class="terminal">
+            <div class="terminal-inner">
+                <p>JasonLin@homepage: ~$ run ~/init</p>
+                <p>Hello, World!</p>
+                <p>JasonLin@homepage: ~$</p>
+            </div>
+        </section>
+        <!-- End of body container -->
+    </body>
+
+    <!-- Footer container -->
+    <footer>
+
+    </footer>
+    <!-- End of footer container -->
 </html>
