--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <!-- Header descriptor -->
+    <!-- Head descriptor -->
 	<head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />  <!-- Portability to mobile/tablet screen -->
         <title>Jason Lin - Software Designer</title>
+        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/main.css">
     </head>
-    <!-- End of header descriptor -->
+    <!-- End of head descriptor -->
 
     <body>
         <!-- Header container -->
@@ -21,7 +23,7 @@
                         <li><a href="index.html" class="current">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Resume</a></li>
-                        <li><a href="#">Profolio></a></li>
+                        <li><a href="#">Profolio</a></li>
                     </ul>
                 </nav>
             </div>
@@ -41,7 +43,15 @@
 
     <!-- Footer container -->
     <footer>
-
+        <!-- Links to external sites -->
+        <ul class="links">
+            <!-- LinkedIn -->
+            <li><a href="https://www.linkedin.com/in/jason-lin-8548a4b8"><i class="fa fa-linkedin-square"></i></a></li>
+            <!-- Github projects -->
+            <li><a href="#"><i class="fa fa-github-square"></i></a></li>
+            <!-- Steam -->
+            <li><a href="#"><i class="fa fa-steam-square"></i></a></li>
+        </ul>
     </footer>
     <!-- End of footer container -->
 </html>
