--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
         <header>
             <div id="header-inner">
                 <!-- Logo reference -->
+                <a href="index.html" id="logo"></a>
+
                 <!-- Navigation menu -->
                 <nav>
                     <!-- Menu icon for mobile/tablet -->
                     <!-- Navigation tabs -->
                     <ul>
-                        <li><a href="index.html" class="current">Home</a></li>
+                        <li class="current"><a href="index.html">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Resume</a></li>
                         <li><a href="#">Profolio</a></li>
@@ -28,6 +30,7 @@
                 </nav>
             </div>
         </header>
+
         <!-- End of header container -->
 
         <!-- Body container -->
@@ -38,20 +41,29 @@
                 <p>JasonLin@homepage: ~$</p>
             </div>
         </section>
-        <!-- End of body container -->
-    </body>
 
-    <!-- Footer container -->
-    <footer>
-        <!-- Links to external sites -->
-        <ul class="links">
-            <!-- LinkedIn -->
-            <li><a href="https://www.linkedin.com/in/jason-lin-8548a4b8"><i class="fa fa-linkedin-square"></i></a></li>
-            <!-- Github projects -->
-            <li><a href="#"><i class="fa fa-github-square"></i></a></li>
-            <!-- Steam -->
-            <li><a href="#"><i class="fa fa-steam-square"></i></a></li>
-        </ul>
-    </footer>
-    <!-- End of footer container -->
+        <section class="info">
+            <div class="info-inner">
+                <h1>I am a</h1>
+                <h1>Software Engineer.</h1>
+            </div>
+            <button onclick="#">Resume</button>
+            <button onclick="#">Contact</button>
+        </section>
+        <!-- End of body container -->
+
+        <!-- Footer container -->
+        <footer>
+            <!-- Links to external sites -->
+            <ul class="links">
+                <!-- LinkedIn -->
+                <li><a href="https://www.linkedin.com/in/jason-lin-8548a4b8"><i class="fa fa-linkedin-square"></i></a></li>
+                <!-- Github projects -->
+                <li><a href="#"><i class="fa fa-github-square"></i></a></li>
+                <!-- Steam -->
+                <li><a href="#"><i class="fa fa-steam-square"></i></a></li>
+            </ul>
+        </footer>
+        <!-- End of footer container -->
+    </body>
 </html>
