Index.html layout finalized
Finalized overall layout of index.html

--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
         <!-- Body container -->
         <section class="terminal">
             <div class="terminal-inner">
-                <p>JasonLin@homepage: ~$ run ~/init</p>
-                <p>Hello, World!</p>
-                <p>JasonLin@homepage: ~$</p>
+                <h3>JasonLin@homepage: ~$ run ~/init</h3>
+                <h3>Initializing environment...</h3>
+                <h3>Loading user configurations...</h3>
+                <h3>Executing program: intro.exe</h3>
+                <h3>Hello, World!</h3>
+                <h3>JasonLin@homepage: ~$</h3>
             </div>
         </section>
 
