--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <h1>I am a</h1>
                 <h1>Software Engineer.</h1>
             </div>
-            <button onclick="#">Resume</button>
-            <button onclick="#">Contact</button>
+            <button class="button btnResume" onclick="#">Resume</button>
+            <button class="button btnContact" onclick="#">Contact</button>
         </section>
         <!-- End of body container -->
 
