Added placeholder for mobile version nav tabs

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <!-- Navigation menu -->
                 <nav>
                     <!-- Menu icon for mobile/tablet -->
+                    <a href="#" id="menu-icon"></a>
+
                     <!-- Navigation tabs -->
                     <ul>
                         <li class="current"><a href="index.html">Home</a></li>
