--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <!-- End of head descriptor -->
 
     <body>
+        <!-- Javascript references -->
+        <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
+        <script src="js/terminal_animation.js" type="text/javascript"></script>
+
         <!-- Header container -->
         <header>
             <div id="header-inner">
@@ -24,10 +28,10 @@
 
                     <!-- Navigation tabs -->
                     <ul>
-                        <li class="current"><a href="index.html">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Resume</a></li>
-                        <li><a href="#">Profolio</a></li>
+                        <li class="current" id="hometab"><a href="index.html">Home</a></li>
+                        <li id="abouttab"><a href="#">About</a></li>
+                        <li id="resumetab"><a href="#">Resume</a></li>
+                        <li id="profoliotab"><a href="#">Profolio</a></li>
                     </ul>
                 </nav>
             </div>
@@ -38,22 +42,32 @@
         <!-- Body container -->
         <section class="terminal">
             <div class="terminal-inner">
-                <h3>JasonLin@homepage: ~$ run ~/init</h3>
+                <span id="terminal"></span><span id="cursor">|</span>
+                <noscript>
+                <h3>jasonlin@homepage: ~$ run ~/init</h3>
                 <h3>Initializing environment...</h3>
                 <h3>Loading user configurations...</h3>
                 <h3>Executing program: intro.exe</h3>
                 <h3>Hello, World!</h3>
-                <h3>JasonLin@homepage: ~$</h3>
+                <h3>jasonlin@homepage: ~$</h3>
+                </noscript>
             </div>
         </section>
 
         <section class="info">
             <div class="info-inner">
+                <h1 id="center-info"></h1>
+                <noscript>
                 <h1>I am a</h1>
                 <h1>Software Engineer.</h1>
+                </noscript>
             </div>
-            <button class="button btnResume" onclick="#">Resume</button>
-            <button class="button btnContact" onclick="#">Contact</button>
+        </section>
+        <section class="buttons">
+            <div class="buttons-inner">
+            <button class="button btnResume" id="btnRes" onclick="#" disabled>Resume</button>
+            <button class="button btnContact" id="btnCon" onclick="#" disabled>Contact</button>
+            </div>
         </section>
         <!-- End of body container -->
 
