Index animation feature complete
Added all animation feature to homepage

Navigation bar animation still buggy

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     <a href="#" id="menu-icon"></a>
 
                     <!-- Navigation tabs -->
-                    <ul>
-                        <li class="current" id="hometab"><a href="index.html">Home</a></li>
-                        <li id="abouttab"><a href="#">About</a></li>
-                        <li id="resumetab"><a href="#">Resume</a></li>
-                        <li id="profoliotab"><a href="#">Profolio</a></li>
+                    <ul id="nav">
+                        <li id="homepage" class="current"><a href="index.html">Home</a></li>
+                        <li id="about"><a href="#">About</a></li>
+                        <li id="resume"><a href="#">Resume</a></li>
+                        <li id="profolio"><a href="#">Profolio</a></li>
                     </ul>
                 </nav>
             </div>
@@ -42,7 +42,7 @@
         <!-- Body container -->
         <section class="terminal">
             <div class="terminal-inner">
-                <span id="terminal"></span><span id="cursor">|</span>
+                <span id="terminal"></span><span id="hovercmd"></span><span id="cursor">|</span>
                 <noscript>
                 <h3>jasonlin@homepage: ~$ run ~/init</h3>
                 <h3>Initializing environment...</h3>
