--- a/homepage.html
+++ b/homepage.html
@@ -13,7 +13,7 @@
     <body>
         <!-- Javascript references -->
         <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
-        <script src="js/terminal_animation.js" type="text/javascript"></script>
+        <script src="js/homepage_animation.js" type="text/javascript"></script>
 
         <!-- Header container -->
         <header>
@@ -36,7 +36,6 @@
                 </nav>
             </div>
         </header>
-
         <!-- End of header container -->
 
         <!-- Body container -->
