FIX: change logo redirect to homepage.html

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <header>
             <div id="header-inner">
                 <!-- Logo reference -->
-                <a href="index.html" id="logo"></a>
+                <a href="homepage.html" id="logo"></a>
 
                 <!-- Navigation menu -->
                 <nav>
