created all html/css/js files

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/about.css">
     </head>
     <!-- End of head descriptor -->
+
     <body>
         <!-- Header container -->
         <header>
@@ -32,6 +33,16 @@
             </div>
         </header>
         <!-- End of header container -->
+
+        <!-- Terminal section -->
+        <!-- End of terminal section -->
+
+        <!-- Picture section -->
+        <!-- End of picture section -->
+
+        <!-- Description section -->
+        <!-- End of description section -->
+
 
         <!-- Footer container -->
         <footer>
