--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                         <li id="homepage"><a href="index.html">Home</a></li>
                         <li id="about" class="current"><a href="#">About</a></li>
                         <li id="resume"><a href="#">Resume</a></li>
-                        <li id="profolio"><a href="#">Profolio</a></li>
+                        <!--li id="profolio"><a href="#">Profolio</a></li-->
                     </ul>
                 </nav>
             </div>
@@ -51,9 +51,9 @@
                 <!-- LinkedIn -->
                 <li><a href="https://www.linkedin.com/in/jason-lin-8548a4b8"><i class="fa fa-linkedin-square"></i></a></li>
                 <!-- Github projects -->
-                <li><a href="#"><i class="fa fa-github-square"></i></a></li>
+                <!--li><a href="#"><i class="fa fa-github-square"></i></a></li-->
                 <!-- Steam -->
-                <li><a href="#"><i class="fa fa-steam-square"></i></a></li>
+                <!--li><a href="#"><i class="fa fa-steam-square"></i></a></li-->
             </ul>
         </footer>
         <!-- End of footer container -->
