--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
         <script src="js/index_animation.js" type="text/javascript"></script>
 
-        <section class="power">
+        <div class="power">
             <div class="power-inner" id="powerlight">
                 <a href="homepage.html"><img src="img/powerBtn.png"></a>
             </div>
-        </section>
+        </div>
     </body>
 </html>
