--- a/homepage.html
+++ b/homepage.html
@@ -15,7 +15,7 @@
         <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
         <script src="js/homepage_animation.js" type="text/javascript"></script>
 
-        <!-- Header container -->
+        <!-- Navigation bar -->
         <header>
             <div id="header-inner">
                 <!-- Logo reference -->
@@ -36,12 +36,13 @@
                 </nav>
             </div>
         </header>
-        <!-- End of header container -->
+        <!-- End of Navigation bar-->
 
         <!-- Body container -->
+        <!-- Container for terminal console -->
         <section class="terminal">
             <div class="terminal-inner">
-                <span id="terminal"></span><span id="hovercmd"></span><span id="cursor">|</span>
+                <span id="terminaldisp"></span><span id="hovercmd"></span><span id="cursor">|</span>
                 <noscript>
                 <h3>jasonlin@homepage: ~$ run ~/init</h3>
                 <h3>Initializing environment...</h3>
@@ -53,15 +54,18 @@
             </div>
         </section>
 
+        <!-- Container for centered info display -->
         <section class="info">
             <div class="info-inner">
-                <h1 id="center-info"></h1>
+                <h1 id="infodisp"></h1>
                 <noscript>
                 <h1>I am a</h1>
                 <h1>Software Engineer.</h1>
                 </noscript>
             </div>
         </section>
+
+        <!-- Container for quick access buttons -->
         <section class="buttons">
             <div class="buttons-inner">
             <button class="button btnResume" id="btnRes" onclick="#" disabled>Resume</button>
