Resume.html/css

--- a/resume.html
+++ b/resume.html
@@ -5,13 +5,15 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />  <!-- Portability to mobile/tablet screen -->
         <title>Jason Lin - Software Designer</title>
-        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/resume.css">
+
+        <!-- CSS reference -->
     </head>
     <!-- End of head descriptor -->
 
     <body>
-        <!-- Header container -->
+        <!-- Javascript references -->
+
+        <!-- Navigation bar -->
         <header>
             <div id="header-inner">
                 <!-- Logo reference -->
@@ -24,25 +26,17 @@
 
                     <!-- Navigation tabs -->
                     <ul id="nav">
-                        <li id="homepage"><a href="index.html">Home</a></li>
+                        <li id="homepage" class="current"><a href="index.html">Home</a></li>
                         <li id="about"><a href="#">About</a></li>
-                        <li id="resume" class="current"><a href="#">Resume</a></li>
+                        <li id="resume"><a href="#">Resume</a></li>
                         <!--li id="profolio"><a href="#">Profolio</a></li-->
                     </ul>
                 </nav>
             </div>
         </header>
-        <!-- End of header container -->
+        <!-- End of Navigation bar-->
 
-        <!-- Terminal section -->
-        <!-- End of terminal section -->
-
-        <!-- Picture section -->
-        <!-- End of picture section -->
-
-        <!-- Description section -->
-        <!-- End of description section -->
-
+        <!-- Page specific contents goes here -->
 
         <!-- Footer container -->
         <footer>
