resume parallax view prototype

--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,8 @@
         <title>Jason Lin - Software Designer</title>
 
         <!-- CSS reference -->
+        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/resume.css">
     </head>
     <!-- End of head descriptor -->
 
@@ -36,7 +38,56 @@
         </header>
         <!-- End of Navigation bar-->
 
-        <!-- Page specific contents goes here -->
+        <!-- Start of main contents-->
+        <main>
+        <section class="module parallax parallax-1">
+            <div class="container">
+                <h1> Skills </h1>
+            </div>
+        </section>
+
+        <section class="module content">
+            <div class="container">
+                <h2> Most Comfortable with:</h2>
+                <p> C/C++, C#, Java, Python</p>
+                <h2> Experienced with: </h2>
+                <p> HTML, CSS, Javascript </p>
+                <h2> Other skills: </h2>
+                <p> Software security, Cryptography, ISO </p>
+            </div>
+        </section>
+
+        <section class="module parallax parallax-2">
+            <div class="container">
+                <h1> Experience </h1>
+            </div>
+        </section>
+
+        <section class="module content">
+            <div class="container">
+                <h2> jNet ThingsX</h2>
+                <p> Aug., 2015 - present </p>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit... </p>
+            </div>
+        </section>
+
+        <section class="module parallax parallax-3">
+            <div class="container">
+                <h1> Education </h1>
+            </div>
+        </section>
+
+        <section class="module content">
+            <div class="container">
+                <h2>Purdue University, West Lafayette</h2>
+                <p>Bachelor of Computer Engineer</p>
+            </div>
+        </section>
+        </main>
+        <!-- End of main contents -->
 
         <!-- Footer container -->
         <footer>
