Refactor: sharing base.css

--- a/about.html
+++ b/about.html
@@ -24,9 +24,9 @@
 
                     <!-- Navigation tabs -->
                     <ul id="nav">
-                        <li id="homepage"><a href="index.html">Home</a></li>
-                        <li id="about" class="current"><a href="#">About</a></li>
-                        <li id="resume"><a href="#">Resume</a></li>
+                        <li id="homepage"><a href="homepage.html">Home</a></li>
+                        <li id="about" class="current"><a href="about.html">About</a></li>
+                        <li id="resume"><a href="resume.html">Resume</a></li>
                         <!--li id="profolio"><a href="#">Profolio</a></li-->
                     </ul>
                 </nav>
