--- a/homepage.html
+++ b/homepage.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />  <!-- Portability to mobile/tablet screen -->
         <title>Jason Lin - Software Designer</title>
         <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/base.css">
         <link rel="stylesheet" href="css/homepage.css">
     </head>
     <!-- End of head descriptor -->
@@ -28,9 +29,9 @@
 
                     <!-- Navigation tabs -->
                     <ul id="nav">
-                        <li id="homepage" class="current"><a href="index.html">Home</a></li>
-                        <li id="about"><a href="#">About</a></li>
-                        <li id="resume"><a href="#">Resume</a></li>
+                        <li id="homepage" class="current"><a href="homepage.html">Home</a></li>
+                        <li id="about"><a href="about.html">About</a></li>
+                        <li id="resume"><a href="resume.html">Resume</a></li>
                         <!--li id="profolio"><a href="#">Profolio</a></li-->
                     </ul>
                 </nav>
