--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,7 @@
 
         <!-- CSS reference -->
         <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/base.css">
         <link rel="stylesheet" href="css/resume.css">
     </head>
     <!-- End of head descriptor -->
@@ -28,9 +29,9 @@
 
                     <!-- Navigation tabs -->
                     <ul id="nav">
-                        <li id="homepage" class="current"><a href="index.html">Home</a></li>
-                        <li id="about"><a href="#">About</a></li>
-                        <li id="resume"><a href="#">Resume</a></li>
+                        <li id="homepage"><a href="homepage.html">Home</a></li>
+                        <li id="about"><a href="about.html">About</a></li>
+                        <li id="resume" class="current"><a href="resume.html">Resume</a></li>
                         <!--li id="profolio"><a href="#">Profolio</a></li-->
                     </ul>
                 </nav>
@@ -39,7 +40,6 @@
         <!-- End of Navigation bar-->
 
         <!-- Start of main contents-->
-        <main>
         <section class="module parallax parallax-1">
             <div class="container">
                 <h1> Skills </h1>
@@ -86,7 +86,6 @@
                 <p>Bachelor of Computer Engineer</p>
             </div>
         </section>
-        </main>
         <!-- End of main contents -->
 
         <!-- Footer container -->
