Resume page draft
html:
	* Basic layout are done
	* Parallaxing mechanic implemented

css:
	* Basic css design

js:
	* dont need animation in this page

--- a/resume.html
+++ b/resume.html
@@ -40,6 +40,7 @@
         <!-- End of Navigation bar-->
 
         <!-- Start of main contents-->
+        <!-- Skill section -->
         <section class="module parallax parallax-1">
             <div class="container">
                 <h1> Skills </h1>
@@ -48,15 +49,32 @@
 
         <section class="module content">
             <div class="container">
-                <h2> Most Comfortable with:</h2>
-                <p> C/C++, C#, Java, Python</p>
-                <h2> Experienced with: </h2>
-                <p> HTML, CSS, Javascript </p>
-                <h2> Other skills: </h2>
-                <p> Software security, Cryptography, ISO </p>
+                <div class="skill topskill">
+                    <h2>Day-to-Day</h2>
+                    <p>C/C++</p>
+                    <p>C#</p>
+                    <p>Java</p>
+                    <p>Git</p>
+                    <p>Agile</p>
+                    <p>Cryptography</p>
+                </div>
+                <div class="skill familiarskill">
+                    <h2>Familiar With</h2>
+                    <p>Unity</p>
+                    <p>Python</p>
+                    <p>Bash</p>
+                </div>
+                <div class="skill expskill">
+                    <h2>Had Experience</h2>
+                    <p>HTML</p>
+                    <p>CSS</p>
+                    <p>Javascript</p>
+                </div>
             </div>
         </section>
+        <!-- End of Skill section -->
 
+        <!-- Experience section -->
         <section class="module parallax parallax-2">
             <div class="container">
                 <h1> Experience </h1>
@@ -65,15 +83,27 @@
 
         <section class="module content">
             <div class="container">
-                <h2> jNet ThingsX</h2>
-                <p> Aug., 2015 - present </p>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit... </p>
+                <div class="exp leftbox">
+                    <h2> jNet ThingsX</h2>
+                    <p> Aug., 2015 - present </p>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit... </p>
+                </div>
+                <div class="exp rightbox">
+                    <h2> jNet ThingsX</h2>
+                    <p> Aug., 2015 - present </p>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit... </p>
+                </div>
             </div>
         </section>
+        <!-- End of Experience section -->
 
+        <!-- Education section -->
         <section class="module parallax parallax-3">
             <div class="container">
                 <h1> Education </h1>
@@ -86,6 +116,7 @@
                 <p>Bachelor of Computer Engineer</p>
             </div>
         </section>
+        <!-- End of Eduction section -->
         <!-- End of main contents -->
 
         <!-- Footer container -->
