resume page layout

--- a/resume.html
+++ b/resume.html
@@ -112,8 +112,14 @@
 
         <section class="module content">
             <div class="container">
-                <h2>Purdue University, West Lafayette</h2>
-                <p>Bachelor of Computer Engineer</p>
+                <div class="school">
+                    <h2>Bachelor Degree of Computer Engineering</h2>
+                    <p>Purdue University</p>
+                </div>
+                <div class="school">
+                    <h2>Bachelor Degree of Computer Engineering</h2>
+                    <p>Purdue University</p>
+                </div>
             </div>
         </section>
         <!-- End of Eduction section -->
