--- a/index.html
+++ b/index.html
@@ -9,40 +9,51 @@
         <!-- CSS style links -->
         <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/version2.css">
+
+        <!-- Javascript animation -->
+        <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
+        <script src="js/version2.js" type="text/javascript"></script>
     </head>
     <!-- End of head descriptor -->
 
     <body>
+        <!-- Icon -->
+        <a href="#" id="logo"></a>
+
         <section class="leftpanel">
             <!-- Terminal display-->
             <section class="terminal">
                 <div class="terminal-inner">
-                    <!--span id="terminaldisp"></span><span id="hovercmd"></span><span id="cursor">|</span-->
+                    <span id="terminaldisp"></span><span id="hovercmd"></span><span id="cursor">|</span>
+
+                    <noscript>
                     <h3>jasonlin@homepage: ~$ run ~/init</h3>
                     <h3>Initializing environment...</h3>
                     <h3>Loading user configurations...</h3>
                     <h3>Executing program: intro.exe</h3>
                     <h3>Hello, World!</h3>
                     <h3>jasonlin@homepage: ~$</h3>
+                    </noscript>
                 </div>
             </section>
 
             <!-- Center msg-->
             <section class="center">
                 <div class="center-inner">
-                    <h1>Software Engineer.</h1>
+                    <h1 id="centerdisp"></h1>
+
+                    <noscript>
+                        <h1>I am a</h1>
+                        <h1>Software Engineer.</h1>
+                    </noscript>
                 </div>
             </section>
         </section>
 
-        <section class="rightpanel">
-            <!-- Icon -->
-            <div class="icon">
-            </div>
-
+        <section class="rightpanel" id="panel">
             <!--Sidebar -->
-            <section class="sidebar-wrapper">
-                <div class="sidebar">
+            <section class="sidebar-wrapper" id="sidebarWrapper">
+                <div class="sidebar" id="sidebar">
                     <!-- Internal links -->
                     <ul class="internal">
                         <li><a href="#"> HOME </a></li>
