Switching to version 2

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 
         <!-- CSS style links -->
         <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/version2.css">
+        <link rel="stylesheet" href="css/base.css">
+        <link rel="stylesheet" href="css/homepage.css">
 
         <!-- Javascript animation -->
         <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
-        <script src="js/version2.js" type="text/javascript"></script>
+        <script src="js/homepage.js" type="text/javascript"></script>
     </head>
     <!-- End of head descriptor -->
 
@@ -27,12 +28,12 @@
                     <span id="terminaldisp"></span><span id="hovercmd"></span><span id="cursor">|</span>
 
                     <noscript>
-                    <h3>jasonlin@homepage: ~$ run ~/init</h3>
-                    <h3>Initializing environment...</h3>
-                    <h3>Loading user configurations...</h3>
-                    <h3>Executing program: intro.exe</h3>
-                    <h3>Hello, World!</h3>
-                    <h3>jasonlin@homepage: ~$</h3>
+                        <h3>jasonlin@homepage: ~$ run ~/init</h3>
+                        <h3>Initializing environment...</h3>
+                        <h3>Loading user configurations...</h3>
+                        <h3>Executing program: intro.exe</h3>
+                        <h3>Hello, World!</h3>
+                        <h3>jasonlin@homepage: ~$ |</h3>
                     </noscript>
                 </div>
             </section>
@@ -52,7 +53,7 @@
 
         <section class="rightpanel" id="panel">
             <!--Sidebar -->
-            <section class="sidebar-wrapper" id="sidebarWrapper">
+            <section class="sidebar-wrapper noJS" id="sidebarWrapper">
                 <div class="sidebar" id="sidebar">
                     <!-- Internal links -->
                     <ul class="internal">
