Refactored homepage.js

--- a/about.html
+++ b/about.html
@@ -21,7 +21,8 @@
         <a href="#" id="logo"></a>
 
         <section class="leftpanel">
-            <!-- Page Content -->
+            <div>
+            </div>
         </section>
 
         <section class="rightpanel" id="panel">
