Added internal link hover effect
clean up index.html

--- a/resume.html
+++ b/resume.html
@@ -24,15 +24,15 @@
             <!-- Page Content -->
         </section>
 
-        <section class="rightpanel" id="panel">
+        <section class="rightpanel">
             <!--Sidebar -->
-            <section class="sidebar-wrapper noJS" id="sidebarWrapper">
+            <section class="sidebar-wrapper">
                 <div class="sidebar" id="sidebar">
                     <!-- Internal links -->
                     <ul class="internal">
                         <li><a href="index.html"> HOME </a></li>
                         <li><a href="about.html"> ABOUT </a></li>
-                        <li><a href="resume.html"> RESUME </a></li>
+                        <li class="current"><a href="resume.html"> RESUME </a></li>
                     </ul>
 
                     <!-- External links -->
