--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
         <!-- CSS style links -->
         <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/base.css">
+        <link rel="stylesheet" href="css/about.css">
 
         <!-- Javascript animation -->
         <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
@@ -21,18 +22,24 @@
         <a href="#" id="logo"></a>
 
         <section class="leftpanel">
-            <div>
+            <div class="container favorite">
+            </div>
+
+            <div class="container software">
+            </div>
+
+            <div class="container passion">
             </div>
         </section>
 
-        <section class="rightpanel" id="panel">
+        <section class="rightpanel">
             <!--Sidebar -->
-            <section class="sidebar-wrapper noJS" id="sidebarWrapper">
-                <div class="sidebar" id="sidebar">
+            <section class="sidebar-wrapper">
+                <div class="sidebar">
                     <!-- Internal links -->
                     <ul class="internal">
                         <li><a href="index.html"> HOME </a></li>
-                        <li><a href="about.html"> ABOUT </a></li>
+                        <li class="current"><a href="about.html"> ABOUT </a></li>
                         <li><a href="resume.html"> RESUME </a></li>
                     </ul>
 
