--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             </section>
         </section>
 
-        <section class="rightpanel" id="panel">
+        <section class="rightpanel">
             <!--Sidebar -->
-            <section class="sidebar-wrapper noJS" id="sidebarWrapper">
-                <div class="sidebar" id="sidebar">
+            <section class="sidebar-wrapper">
+                <div class="sidebar">
                     <!-- Internal links -->
                     <ul class="internal">
-                        <li><a href="index.html"> HOME </a></li>
+                        <li class="current"><a href="index.html"> HOME </a></li>
                         <li><a href="about.html"> ABOUT </a></li>
                         <li><a href="resume.html"> RESUME </a></li>
                     </ul>
