about page layout

--- a/about.html
+++ b/about.html
@@ -23,12 +23,81 @@
 
         <section class="leftpanel">
             <div class="container favorite">
+                <div class="icon"><i class="fa fa-user"></i></div>
+
+                <div class="overview">
+                    <h1> I am </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque varius, mauris in placerat hendrerit, mi elit lobortis ante, vel dapibus ipsum enim a est. Donec pulvinar odio vitae tristique aliquam. Nullam a est non justo vestibulum mollis at a orci. Quisque ut faucibus nibh. Vestibulum luctus, tortor vitae semper porttitor, ante tellus tincidunt lectus, at lobortis libero felis fringilla est. Mauris in mollis velit, et ornare felis. Aliquam posuere dui commodo varius pulvinar. Maecenas felis tellus, imperdiet ut dolor vel, fringilla mollis elit. Praesent vitae mauris ut risus semper ultrices.</p>
+                </div>
+
+                <section class="detail-wrapper">
+                    <div>
+                        <h2><i class="fa fa-heart"></i> What I Love </h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque varius, mauris in placerat hendrerit, mi elit lobortis ante, vel dapibus ipsum enim a est. Donec pulvinar odio vitae tristique aliquam. Nullam a est non justo vestibulum mollis at a orci.</p>
+                    </div>
+
+                    <div>
+                        <h2><i class="fa fa-code"></i> My Passion </h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque varius, mauris in placerat hendrerit, mi elit lobortis ante, vel dapibus ipsum enim a est. Donec pulvinar odio vitae tristique aliquam. Nullam a est non justo vestibulum mollis at a orci.</p>
+                    </div>
+
+                    <div>
+                        <h2><i class="fa fa-terminal"></i> My Path </h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque varius, mauris in placerat hendrerit, mi elit lobortis ante, vel dapibus ipsum enim a est. Donec pulvinar odio vitae tristique aliquam. Nullam a est non justo vestibulum mollis at a orci.</p>
+                    </div>
+                </section>
             </div>
 
             <div class="container software">
+                <div class="icon"><i class="fa fa-user"></i></div>
+
+                <div class="overview">
+                    <h1> I am </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque varius, mauris in placerat hendrerit, mi elit lobortis ante, vel dapibus ipsum enim a est. Donec pulvinar odio vitae tristique aliquam. Nullam a est non justo vestibulum mollis at a orci. Quisque ut faucibus nibh. Vestibulum luctus, tortor vitae semper porttitor, ante tellus tincidunt lectus, at lobortis libero felis fringilla est. Mauris in mollis velit, et ornare felis. Aliquam posuere dui commodo varius pulvinar. Maecenas felis tellus, imperdiet ut dolor vel, fringilla mollis elit. Praesent vitae mauris ut risus semper ultrices.</p>
+                </div>
+
+                <section class="detail-wrapper">
+                    <div>
+                        <h2><i class="fa fa-heart"></i> What I Love </h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque varius, mauris in placerat hendrerit, mi elit lobortis ante, vel dapibus ipsum enim a est. Donec pulvinar odio vitae tristique aliquam. Nullam a est non justo vestibulum mollis at a orci.</p>
+                    </div>
+
+                    <div>
+                        <h2><i class="fa fa-code"></i> My Passion </h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque varius, mauris in placerat hendrerit, mi elit lobortis ante, vel dapibus ipsum enim a est. Donec pulvinar odio vitae tristique aliquam. Nullam a est non justo vestibulum mollis at a orci.</p>
+                    </div>
+
+                    <div>
+                        <h2><i class="fa fa-terminal"></i> My Path </h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque varius, mauris in placerat hendrerit, mi elit lobortis ante, vel dapibus ipsum enim a est. Donec pulvinar odio vitae tristique aliquam. Nullam a est non justo vestibulum mollis at a orci.</p>
+                    </div>
+                </section>
             </div>
 
             <div class="container passion">
+                <div class="icon"><i class="fa fa-user"></i></div>
+
+                <div class="overview">
+                    <h1> I am </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque varius, mauris in placerat hendrerit, mi elit lobortis ante, vel dapibus ipsum enim a est. Donec pulvinar odio vitae tristique aliquam. Nullam a est non justo vestibulum mollis at a orci. Quisque ut faucibus nibh. Vestibulum luctus, tortor vitae semper porttitor, ante tellus tincidunt lectus, at lobortis libero felis fringilla est. Mauris in mollis velit, et ornare felis. Aliquam posuere dui commodo varius pulvinar. Maecenas felis tellus, imperdiet ut dolor vel, fringilla mollis elit. Praesent vitae mauris ut risus semper ultrices.</p>
+                </div>
+
+                <section class="detail-wrapper">
+                    <div>
+                        <h2><i class="fa fa-heart"></i> What I Love </h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque varius, mauris in placerat hendrerit, mi elit lobortis ante, vel dapibus ipsum enim a est. Donec pulvinar odio vitae tristique aliquam. Nullam a est non justo vestibulum mollis at a orci.</p>
+                    </div>
+
+                    <div>
+                        <h2><i class="fa fa-code"></i> My Passion </h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque varius, mauris in placerat hendrerit, mi elit lobortis ante, vel dapibus ipsum enim a est. Donec pulvinar odio vitae tristique aliquam. Nullam a est non justo vestibulum mollis at a orci.</p>
+                    </div>
+
+                    <div>
+                        <h2><i class="fa fa-terminal"></i> My Path </h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque varius, mauris in placerat hendrerit, mi elit lobortis ante, vel dapibus ipsum enim a est. Donec pulvinar odio vitae tristique aliquam. Nullam a est non justo vestibulum mollis at a orci.</p>
+                    </div>
+                </section>
             </div>
         </section>
 
