Added profolio page
Organize html files other than index into html folder
	* index.html need to be at root for github page

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                     <!-- Internal links -->
                     <ul class="internal">
                         <li class="current"><a href="index.html"> HOME </a></li>
-                        <li><a href="about.html"> ABOUT </a></li>
-                        <li><a href="resume.html"> RESUME </a></li>
+                        <li><a href="html/about.html"> ABOUT </a></li>
+                        <li><a href="html/resume.html"> RESUME </a></li>
+                        <li><a href="html/portfolio.html"> PORTFOLIO </a></li>
                     </ul>
 
                     <!-- External links -->
