--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -7,12 +7,14 @@
         <title>Jason Lin - Software Designer</title>
 
         <!-- CSS style links -->
-        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/base.css">
+        <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="../css/base.css">
+        <link rel="stylesheet" href="../css/portfolio.css">
 
         <!-- Javascript animation -->
-        <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
-        <script src="js/base.js" type="text/javascript"></script>
+        <script src="../js/jquery-3.1.1.min.js" type="text/javascript"></script>
+        <script src="../js/base.js" type="text/javascript"></script>
+        <script src="../js/portfolio.js" type="text/javascript"></script>
     </head>
     <!-- End of head descriptor -->
 
@@ -21,18 +23,26 @@
         <a href="#" id="logo"></a>
 
         <section class="leftpanel">
-            <!-- Page Content -->
+            <div class="content">
+                <ul class="list">
+                    <li><a href="#"><h1>XiaoTang</h1><h3>Android UI Design</h3></a></li>
+                    <li><a href="#"><h1>Fragments</h1><h3>VR Game Design</h3></a></li>
+                    <li><a href="#"><h1>Pinball Arcade</h1><h3>MCU Game Application</h3></a></li>
+                    <li><a href="#"><h1>Website</h1><h3>Personal Web Design</h3></a></li>
+                </ul>
+            </div>
         </section>
 
-        <section class="rightpanel">
+        <section class="rightpanel" id="panel">
             <!--Sidebar -->
-            <section class="sidebar-wrapper">
+            <section class="sidebar-wrapper noJS" id="sidebarWrapper">
                 <div class="sidebar" id="sidebar">
                     <!-- Internal links -->
                     <ul class="internal">
-                        <li><a href="index.html"> HOME </a></li>
+                        <li><a href="../index.html"> HOME </a></li>
                         <li><a href="about.html"> ABOUT </a></li>
-                        <li class="current"><a href="resume.html"> RESUME </a></li>
+                        <li><a href="resume.html"> RESUME </a></li>
+                        <li class="current"><a href="portfolio.html"> PORTFOLIO </a></li>
                     </ul>
 
                     <!-- External links -->
