--- a/html/projects.html
+++ b/html/projects.html
@@ -7,13 +7,14 @@
         <title>Jason Lin - Software Designer</title>
 
         <!-- CSS style links -->
-        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="../css/base.css">
-        <link rel="stylesheet" href="../css/about.css">
+        <link rel="stylesheet" href="../css/portfolio.css">
 
         <!-- Javascript animation -->
         <script src="../js/jquery-3.1.1.min.js" type="text/javascript"></script>
         <script src="../js/base.js" type="text/javascript"></script>
+        <script src="../js/projects.js" type="text/javascript"></script>
     </head>
     <!-- End of head descriptor -->
 
@@ -22,34 +23,26 @@
         <a href="#" id="logo"></a>
 
         <section class="leftpanel">
-            <!-- Adjustment content wrapper -->
             <div class="content">
-                <!-- upper contains img and description -->
-                <div class="upper">
-                    <div class="img"></div>
-
-                    <div class="text">
-                        <h1> Hi, I am Jason</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vehicula tincidunt finibus. Donec aliquam dui vitae metus imperdiet, quis finibus nibh tincidunt. Suspendisse in euismod lacus, in cursus est. Etiam risus massa, rhoncus quis mattis imperdiet, blandit sit amet purus. Sed rhoncus tristique elit eu ullamcorper. Donec aliquam nisi maximus ultricies commodo. Maecenas et erat orci. Donec et neque eget sem sagittis scelerisque. In sed nibh rhoncus orci fermentum condimentum. Ut ac mollis erat. Donec sed porttitor orci, quis congue est.</p>
-                    </div>
-                </div>
-
-                <!-- lower contains three sections listing items -->
-                <div class="lower">
-                </div>
+                <ul class="list">
+                    <li><a href="../projects/xiaotang.html"><h1>XiaoTang</h1><h3>Android UI Design</h3></a></li>
+                    <li><a href="../projects/fragments.html"><h1>Fragments</h1><h3>VR Game Design</h3></a></li>
+                    <li><a href="../projects/pinballarcade.html"><h1>Pinball Arcade</h1><h3>MCU Game Application</h3></a></li>
+                    <li><a href="../projects/website.html"><h1>Website</h1><h3>Personal Web Design</h3></a></li>
+                </ul>
             </div>
         </section>
 
-        <section class="rightpanel">
+        <section class="rightpanel" id="panel">
             <!--Sidebar -->
-            <section class="sidebar-wrapper">
-                <div class="sidebar">
+            <section class="sidebar-wrapper noJS" id="sidebarWrapper">
+                <div class="sidebar" id="sidebar">
                     <!-- Internal links -->
                     <ul class="internal">
                         <li><a href="../index.html"> HOME </a></li>
-                        <li class="current"><a href="about.html"> ABOUT </a></li>
+                        <li><a href="about.html"> ABOUT </a></li>
                         <li><a href="resume.html"> RESUME </a></li>
-                        <li><a href="projects.html"> PROJECTS </a></li>
+                        <li class="current"><a href="projects.html"> PROJECTS </a></li>
                     </ul>
 
                     <!-- External links -->
