--- a/html/resume.html
+++ b/html/resume.html
@@ -111,7 +111,7 @@
                         <li><a href="../index.html"> HOME </a></li>
                         <li><a href="about.html"> ABOUT </a></li>
                         <li class="current"><a href="resume.html"> RESUME </a></li>
-                        <li><a href="portfolio.html"> PORTFOLIO </a></li>
+                        <li><a href="projects.html"> PROJECTS </a></li>
                     </ul>
 
                     <!-- External links -->
