--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <li class="current"><a href="index.html"> HOME </a></li>
                         <li><a href="html/about.html"> ABOUT </a></li>
                         <li><a href="html/resume.html"> RESUME </a></li>
-                        <li><a href="html/portfolio.html"> PORTFOLIO </a></li>
+                        <li><a href="html/projects.html"> PROJECTS </a></li>
                     </ul>
 
                     <!-- External links -->
