--- a/projects/website.html
+++ b/projects/website.html
@@ -9,12 +9,11 @@
         <!-- CSS style links -->
         <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="../css/base.css">
-        <link rel="stylesheet" href="../css/portfolio.css">
+        <link rel="stylesheet" href="css/project_base.css">
 
         <!-- Javascript animation -->
         <script src="../js/jquery-3.1.1.min.js" type="text/javascript"></script>
         <script src="../js/base.js" type="text/javascript"></script>
-        <script src="../js/portfolio.js" type="text/javascript"></script>
     </head>
     <!-- End of head descriptor -->
 
@@ -23,13 +22,12 @@
         <a href="#" id="logo"></a>
 
         <section class="leftpanel">
+            <div class="fullimg">
+            </div>
             <div class="content">
-                <ul class="list">
-                    <li><a href="#"><h1>XiaoTang</h1><h3>Android UI Design</h3></a></li>
-                    <li><a href="#"><h1>Fragments</h1><h3>VR Game Design</h3></a></li>
-                    <li><a href="#"><h1>Pinball Arcade</h1><h3>MCU Game Application</h3></a></li>
-                    <li><a href="#"><h1>Website</h1><h3>Personal Web Design</h3></a></li>
-                </ul>
+                <h1> Personal Website </h1>
+                <p> That's this site! I started building personal website because I felt traditional resume can not demonstrate who I am as a person and as a developer; and I don't like online templates because none of it actually fits my idea. Therefore, I jumped right into learning HTML, CSS and Javascript and created a website to illustrate my idea and thoughts.</p>
+                <p> Special thanks to Zejun Yuan for design suggestions </p>
             </div>
         </section>
 
@@ -40,9 +38,9 @@
                     <!-- Internal links -->
                     <ul class="internal">
                         <li><a href="../index.html"> HOME </a></li>
-                        <li><a href="about.html"> ABOUT </a></li>
-                        <li><a href="resume.html"> RESUME </a></li>
-                        <li class="current"><a href="portfolio.html"> PORTFOLIO </a></li>
+                        <li><a href="../html/about.html"> ABOUT </a></li>
+                        <li><a href="../html/resume.html"> RESUME </a></li>
+                        <li class="current"><a href="../html/portfolio.html"> PORFOLIO </a></li>
                     </ul>
 
                     <!-- External links -->
