--- a/projects/xiaotang.html
+++ b/projects/xiaotang.html
@@ -7,12 +7,13 @@
         <title>Jason Lin - Software Designer</title>
 
         <!-- CSS style links -->
-        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/base.css">
+        <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="../css/base.css">
+        <link rel="stylesheet" href="css/project_base.css">
 
         <!-- Javascript animation -->
-        <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
-        <script src="js/base.js" type="text/javascript"></script>
+        <script src="../js/jquery-3.1.1.min.js" type="text/javascript"></script>
+        <script src="../js/base.js" type="text/javascript"></script>
     </head>
     <!-- End of head descriptor -->
 
@@ -21,7 +22,12 @@
         <a href="#" id="logo"></a>
 
         <section class="leftpanel">
-            <!-- Page Content -->
+            <div class="fullimg">
+            </div>
+            <div class="content">
+                <h1> XiaoTang </h1>
+                <p> This was a collaborative mobile app development with couple friends in medical school. The original idea was to develop an mobile application that allows diebetic patients to keep track of their daily blood sugar level. The app will further analyze the blood sugar level trend and display suggestions on how to improve/maintain current status. Primary target was Taiwan and China market.</p>
+            </div>
         </section>
 
         <section class="rightpanel" id="panel">
@@ -30,10 +36,10 @@
                 <div class="sidebar" id="sidebar">
                     <!-- Internal links -->
                     <ul class="internal">
-                        <li><a href="index.html"> HOME </a></li>
-                        <li><a href="about.html"> ABOUT </a></li>
-                        <li><a href="resume.html"> RESUME </a></li>
-                        <li><a href="projects.html"> PROJECTS </a></li>
+                        <li><a href="../index.html"> HOME </a></li>
+                        <li><a href="../html/about.html"> ABOUT </a></li>
+                        <li><a href="../html/resume.html"> RESUME </a></li>
+                        <li class="current"><a href="../html/portfolio.html"> PORFOLIO </a></li>
                     </ul>
 
                     <!-- External links -->
