--- a/html/projects.html
+++ b/html/projects.html
@@ -5,16 +5,17 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />  <!-- Portability to mobile/tablet screen -->
         <title>Jason Lin - Software Designer</title>
+        <base href="/jasonlin0815.github.io/">
 
         <!-- CSS style links -->
-        <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../css/base.css">
-        <link rel="stylesheet" href="../css/portfolio.css">
+        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/base.css">
+        <link rel="stylesheet" href="css/projects.css">
 
         <!-- Javascript animation -->
-        <script src="../js/jquery-3.1.1.min.js" type="text/javascript"></script>
-        <script src="../js/base.js" type="text/javascript"></script>
-        <script src="../js/projects.js" type="text/javascript"></script>
+        <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
+        <script src="js/base.js" type="text/javascript"></script>
+        <script src="js/projects.js" type="text/javascript"></script>
     </head>
     <!-- End of head descriptor -->
 
@@ -25,24 +26,24 @@
         <section class="leftpanel">
             <div class="content">
                 <ul class="list">
-                    <li><a href="../projects/xiaotang.html"><h1>XiaoTang</h1><h3>Android UI Design</h3></a></li>
-                    <li><a href="../projects/fragments.html"><h1>Fragments</h1><h3>VR Game Design</h3></a></li>
-                    <li><a href="../projects/pinballarcade.html"><h1>Pinball Arcade</h1><h3>MCU Game Application</h3></a></li>
-                    <li><a href="../projects/website.html"><h1>Website</h1><h3>Personal Web Design</h3></a></li>
+                    <li><a href="projects/xiaotang/xiaotang.html"><h1>XiaoTang</h1><h3>Android UI Design</h3></a></li>
+                    <li><a href="projects/fragments/fragments.html"><h1>Fragments</h1><h3>VR Game Design</h3></a></li>
+                    <li><a href="projects/pinballarcade/pinballarcade.html"><h1>Pinball Arcade</h1><h3>MCU Game Application</h3></a></li>
+                    <li><a href="projects/website/website.html"><h1>Website</h1><h3>Personal Web Design</h3></a></li>
                 </ul>
             </div>
         </section>
 
-        <section class="rightpanel" id="panel">
+        <section class="rightpanel">
             <!--Sidebar -->
-            <section class="sidebar-wrapper noJS" id="sidebarWrapper">
-                <div class="sidebar" id="sidebar">
+            <section class="sidebar-wrapper">
+                <div class="sidebar">
                     <!-- Internal links -->
                     <ul class="internal">
-                        <li><a href="../index.html"> HOME </a></li>
-                        <li><a href="about.html"> ABOUT </a></li>
-                        <li><a href="resume.html"> RESUME </a></li>
-                        <li class="current"><a href="projects.html"> PROJECTS </a></li>
+                        <li><a href="index.html"> HOME </a></li>
+                        <li><a href="html/about.html"> ABOUT </a></li>
+                        <li><a href="html/resume.html"> RESUME </a></li>
+                        <li class="current"><a href="html/projects.html"> PROJECTS </a></li>
                     </ul>
 
                     <!-- External links -->
