--- a/html/resume.html
+++ b/html/resume.html
@@ -5,15 +5,16 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />  <!-- Portability to mobile/tablet screen -->
         <title>Jason Lin - Software Designer</title>
+        <base href="/jasonlin0815.github.io/">
 
         <!-- CSS style links -->
         <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../css/base.css">
-        <link rel="stylesheet" href="../css/resume.css">
+        <link rel="stylesheet" href="css/base.css">
+        <link rel="stylesheet" href="css/resume.css">
 
         <!-- Javascript animation -->
-        <script src="../js/jquery-3.1.1.min.js" type="text/javascript"></script>
-        <script src="../js/base.js" type="text/javascript"></script>
+        <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
+        <script src="js/base.js" type="text/javascript"></script>
     </head>
     <!-- End of head descriptor -->
 
@@ -105,13 +106,13 @@
         <section class="rightpanel">
             <!--Sidebar -->
             <section class="sidebar-wrapper">
-                <div class="sidebar" id="sidebar">
+                <div class="sidebar">
                     <!-- Internal links -->
                     <ul class="internal">
-                        <li><a href="../index.html"> HOME </a></li>
-                        <li><a href="about.html"> ABOUT </a></li>
-                        <li class="current"><a href="resume.html"> RESUME </a></li>
-                        <li><a href="projects.html"> PROJECTS </a></li>
+                        <li><a href="index.html"> HOME </a></li>
+                        <li><a href="html/about.html"> ABOUT </a></li>
+                        <li class="current"><a href="html/resume.html"> RESUME </a></li>
+                        <li><a href="html/projects.html"> PROJECTS </a></li>
                     </ul>
 
                     <!-- External links -->
