--- a/html/about.html
+++ b/html/about.html
@@ -27,11 +27,9 @@
             <div class="content">
                 <!-- upper contains img and description -->
                 <div class="upper">
-                    <div class="img"></div>
-
                     <div class="text">
                         <h1> Hi, I am Jason</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vehicula tincidunt finibus. Donec aliquam dui vitae metus imperdiet, quis finibus nibh tincidunt. Suspendisse in euismod lacus, in cursus est. Etiam risus massa, rhoncus quis mattis imperdiet, blandit sit amet purus. Sed rhoncus tristique elit eu ullamcorper. Donec aliquam nisi maximus ultricies commodo. Maecenas et erat orci. Donec et neque eget sem sagittis scelerisque. In sed nibh rhoncus orci fermentum condimentum. Ut ac mollis erat. Donec sed porttitor orci, quis congue est.</p>
+                        <p> I am a software engineer having vast interest in different stack of software technology. Starting from embedded system and microcontrollers using C; to mobile phone projects using Java; recently starting to play around with VR and game development in Unity3D and Unreal Engine. Welcome to my website, I will be frequently updating this website featuring more pet-projects I have been doing. If you like any part of website, feel free to checkout the Github. </p>
                     </div>
                 </div>
 
