--- a/projects/xiaotang/xiaotang.html
+++ b/projects/xiaotang/xiaotang.html
@@ -10,8 +10,8 @@
         <!-- CSS style links -->
         <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/base.css">
-        <link rel="stylesheet" href="css/gallery.css">
         <link rel="stylesheet" href="projects/project_base.css">
+        <link rel="stylesheet" href="css/gallery.css">
 
         <!-- Javascript animation -->
         <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
@@ -26,20 +26,18 @@
 
         <section class="leftpanel">
             <div class="showcase">
-                <div class="fullimg">
+                <div class="fullimg" style="background-image: url(projects/xiaotang/XiaoTangStoryBoard.jpg)">
                 </div>
 
-                <div class="content-trigger">
-                </div>
-               <div class="content">
+                <div class="content">
                     <h1> XiaoTang </h1>
                     <p> This was a collaborative mobile app development with couple friends in medical school. The original idea was to develop an mobile application that allows diebetic patients to keep track of their daily blood sugar level. The app will further analyze the blood sugar level trend and display suggestions on how to improve/maintain current status. Primary target was Taiwan and China market.</p>
                 </div>
             </div>
 
-
             <section class="gallery-wrapper">
                 <div class="gallery">
+                    <div class="gallery-img"><img src="projects/xiaotang/XiaoTangStoryBoard.jpg"></div>
                     <div class="gallery-img"><img src="projects/xiaotang/LayoutEnterP1.jpg"></div>
                     <div class="gallery-img"><img src="projects/xiaotang/LayoutEnterP2.jpg"></div>
                     <div class="gallery-img"><img src="projects/xiaotang/LayoutFirstUseHI.jpg"></div>
@@ -58,6 +56,7 @@
                     <div class="gallery-img"><img src="projects/xiaotang/LayoutSettingPrivacyP2.jpg"></div>
                 </div>
             </section>
+
         </section>
 
         <section class="rightpanel">
